--- a/.github/workflows/send_result.yml
+++ b/.github/workflows/send_result.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install requests
+      - run: pip install requests beautifulsoup4
       - run: python send_result.py
         env:
           LINE_TOKEN: ${{ secrets.LINE_TOKEN }}
